[package]
name = "fast-livo2"
version = "0.1.0"
edition = "2024"
resolver = "3"

[workspace]
members = ["rust-livo2-macros"]

[workspace.dependencies]
rust-livo2-macros = { path = "rust-livo2-macros" }

[dependencies]
fnerror = "0.1.4"
futures-lite = "2.6"
kornia = "0.1.9"
log = "0.4"
museair = "0.4"
nalgebra = "0.34"
num-traits = "0.2"
rust-livo2-macros.workspace = true
thiserror = "2.0"

[features]
